# corpus_update_232425

./: .gitignore  1_clean_raw_list.ipynb  2_download_data.ipynb  3_data_managment.ipynb  4_create_xml.ipynb  5_export_metadata.ipynb  README.md  helper.py  pyproject.toml  regex_negativ.txt  regex_positiv.txt
data/2_list_clean/: clean_list.csv
data/3_html_handcoding/: rk20230628_1bvr101723.html  rk20230904_2bvr123923.html  rk20231205_1bvr222122.html  rk20240204_2bvr094423.html  rk20240312_1bvr060524.html  rk20240515_1bvr80724.html  rk20250215_2bvr23025.html
data/6_metadata/: metadata_232425.csv  metadata_232425.xlsx  metadata_232425_cor.csv  metadata_232425_raw.csv
