[project]
name = "corpus-update"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jupyter>=1.1.1",
    "lxml>=6.1.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "torch>=2.11.0",
    "transformers>=5.5.4",
]
